# models/model_namespace_in_list.go
@@ -1,0 +1,19 @@
+/*
+ * API for kogger
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package models
+
+type NamespaceInList struct {
+
+	// Name of the namespace
+	Name string `json:"name"`
+
+	// Api path to get logs for the namespace
+	Path string `json:"path"`
+}
